Add messages folder

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
   "defaultLocale": "pt-BR",
   "builders": {
     "store": "0.x",
-    "react": "3.x"
+    "react": "3.x",
+    "messages": "0.x"
   },
   "mustUpdateAt": "2019-04-20",
   "categories": [],
