--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,7 @@
     "vtex.styleguide": "9.x",
     "vtex.store-graphql": "2.x",
     "vtex.product-summary": "1.x",
-    "vtex.store-resources": "0.x"
+    "vtex.store-resources": "0.x",
+    "vtex.use-svg": "1.x"
   }
 }
